Correção de regra

--- a/engines/entity/app/views/entity/interests/index.html.haml
+++ b/engines/entity/app/views/entity/interests/index.html.haml
@@ -26,6 +26,6 @@
         %tr 
           %td.text-center
             %i 
-              %p Sua entidade já possuí empreendimento vínculado.
+              %p Sua entidade já possui empreendimento vínculado.
               %p Todas as Associações e Cooperativas credenciadas poderão participar, desde que manifestem interesse, a exceção das Associações e Cooperativas que possuem empreendimento em andamento ou tenham sido contempladas em sorteios anteriores.
   = link_to "Realizar nova manifestação", new_entity_interest_path, class: 'ui button green fluid', data: { disable_with: t(:disable_with)} if @enterprise
