--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -113,9 +113,9 @@
       .description
         .ui.header
         %h3.text-center
-          %p Notamos que você ainda não respondeu o questionário.
+          %p Notamos que você ainda não preencheu a pesquisa.
         .text-center
-          = link_to "Clique aqui para ir para o questionário", attendance.new_form_path(form_id: 7) , class: 'ui button yellow fluid'
+          = link_to "Toque para preencher", attendance.new_form_path(form_id: 7) , class: 'ui button yellow fluid'
 
 
   :javascript
