--- a/engines/entity/app/views/entity/interests/_form.html.haml
+++ b/engines/entity/app/views/entity/interests/_form.html.haml
@@ -6,9 +6,9 @@
           - if @interest.errors.present?
             %tr{style: "background-color: #d64e4e; color: white; font-weight: bold"}
               %td
-              - @interest.errors.full_messages.each do |error| 
+              - @interest.errors.full_messages.each do |error|
                 %td= "*#{error}"
-          - @addresses.order(:address).each do |address|
+          - @addresses.order(:id).each do |address|
             %tr
               %td
                 = check_box_tag "entity_interest_form[unit_sale_ids][]", address.id, @interest.unit_sale_ids.to_a.include?(address.id.to_s)
