--- a/engines/entity/app/views/entity/interests/index.html.haml
+++ b/engines/entity/app/views/entity/interests/index.html.haml
@@ -11,21 +11,21 @@
     %tbody
       - if @enterprise
         - if current_entity.interests.present?
-          - current_entity.interests.where(allotment_id: 2).order(created_at: :desc).each do |interest|
-            %tr 
+          - current_entity.interests.where(allotment_id: [2,3]).order(created_at: :desc).each do |interest|
+            %tr
               %td
-                = link_to "#{interest.protocol} - Sorteio #{interest.allotment_id}", entity_interest_path(interest)
+                %b= link_to "#{interest.protocol} - Sorteio #{interest.allotment_id}", entity_interest_path(interest)
                 %br
                 %i Realizada em #{interest.created_at.strftime("%d/%m/%Y %H:%M")}
-        - else 
-          %tr 
+        - else
+          %tr
             %td
             %td.text-center
               %i Sua entidade não possui nenhuma manifestação
       - else
-        %tr 
+        %tr
           %td.text-center
-            %i 
+            %i
               %p Sua entidade já possui empreendimento vínculado.
               %p Todas as Associações e Cooperativas credenciadas poderão participar, desde que manifestem interesse, a exceção das Associações e Cooperativas que possuem empreendimento em andamento ou tenham sido contempladas em sorteios anteriores.
   = link_to "Realizar nova manifestação", new_entity_interest_path, class: 'ui button green fluid', data: { disable_with: t(:disable_with)} if @enterprise
