--- a/engines/entity/app/views/entity/raffles/entity.html.haml
+++ b/engines/entity/app/views/entity/raffles/entity.html.haml
@@ -11,5 +11,5 @@
     %tbody.black
       - Core::Entity::Interest.where(allotment_id: params[:raffle_id]).each do |e|
         %tr
-          %td= link_to e.entity.fantasy_name, "http://www.codhab.df.gov.br/entidades/cadastros/#{e.entity_id}", data: { disable_with: 'Carregando...'}, target: '_blank'
+          %td= link_to e.entity.fantasy_name, "http://www.codhab.df.gov.br/entidades/cadastros/#{e.entity_id}", data: { disable_with: 'Carregando...'}
           %td= e.entity.cnpj
