--- a/engines/entity/app/views/entity/raffles/index.html.haml
+++ b/engines/entity/app/views/entity/raffles/index.html.haml
@@ -15,7 +15,7 @@
         %td
           = link_to "Endereços", raffle_address_path(1), class: 'ui button tiny', data: { disable_with: "Carregando..."}
           = link_to "Participantes", raffle_entity_path(1), class: 'ui button tiny', data: { disable_with: "Carregando..."}
-          = link_to "Resultado", "http://www.codhab.df.gov.br/postagem/810", target: '_blank', class: 'ui button tiny', data: { disable_with: "Carregando..."}
+          = link_to "Resultado", "http://www.codhab.df.gov.br/postagem/810", class: 'ui button tiny', data: { disable_with: "Carregando..."}
       %tr
         %td
           Sorteio 2
@@ -24,7 +24,7 @@
         %td
           = link_to "Endereços", raffle_address_path(2), class: 'ui button tiny', data: { disable_with: "Carregando..."}
           = link_to "Participantes", raffle_entity_path(2), class: 'ui button tiny', data: { disable_with: "Carregando..."}
-          = link_to "Resultado", "http://www.codhab.df.gov.br/postagem/873", target: '_blank', class: 'ui button tiny', data: { disable_with: "Carregando..."}
+          = link_to "Resultado", "http://www.codhab.df.gov.br/postagem/873", class: 'ui button tiny', data: { disable_with: "Carregando..."}
       %tr
         %td
           Sorteio 3
@@ -33,4 +33,4 @@
         %td
           = link_to "Endereços", raffle_address_path(3), class: 'ui button tiny', data: { disable_with: "Carregando..."}
           = link_to "Participantes", raffle_entity_path(3), class: 'ui button tiny', data: { disable_with: "Carregando..."}
-          = link_to "Resultado", "http://www.codhab.df.gov.br/postagem/898", target: '_blank', class: 'ui button tiny', data: { disable_with: "Carregando..."}
+          = link_to "Resultado", "http://www.codhab.df.gov.br/postagem/898", class: 'ui button tiny', data: { disable_with: "Carregando..."}
