--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -103,6 +103,14 @@
         Pesquisa
 
 
+  - if current_cadastre.age >= 60
+    .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
+      .ui.segment.text-center
+        %a{href: "#{candidate.new_legal_rent_path}"}
+          %i.icon.home.huge.gray.text-center.text-center
+      .text-center
+        Aluguel Legal
+
 
 
 - if @ticket_policy.allow_to_question_two_modal?
