--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -24,6 +24,16 @@
         %i.icon.alarm.huge.gray
     .text-center
       Notificações
+
+
+  - if current_cadastre.age >= 80
+    .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
+      .ui.segment.text-center{style: 'background-color: rgb(129, 195, 65) !important'}
+        %a{href: "#{candidate.new_legal_rent_path}"}
+          %i.icon.home.huge.gray.text-center.text-center{style: 'color: white !important;'}
+      .text-center
+        Aluguel Legal
+
   - if @ticket_policy.allow_other_update?
     .column
       .ui.segment.text-center
@@ -102,14 +112,6 @@
       .text-center
         Pesquisa
 
-
-  - if current_cadastre.age >= 60
-    .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
-      .ui.segment.text-center
-        %a{href: "#{candidate.new_legal_rent_path}"}
-          %i.icon.home.huge.gray.text-center.text-center
-      .text-center
-        Aluguel Legal
 
 
 
