--- a/engines/candidate/app/views/candidate/legal_rents/new.html.haml
+++ b/engines/candidate/app/views/candidate/legal_rents/new.html.haml
@@ -5,6 +5,7 @@
   .thirteen.wide.mobile.column.text-center
     .title-header
       Aluguel legal
+    .sub-title Participar
 .big-divider
 .ui.grid.container
   .column.content-form
