--- a/engines/candidate/app/views/candidate/legal_rents/_show.html.haml
+++ b/engines/candidate/app/views/candidate/legal_rents/_show.html.haml
@@ -7,6 +7,6 @@
       %br
       %br
       %br
-      = link_to "Sim, eu desejo recursar", new_legal_rent_path(status: false), class: 'ui button red fluid', data: {disable_with: "Aguarde..."}
+      = link_to "Eu desejo recusar", new_legal_rent_path(status: false), class: 'ui button red fluid', data: {disable_with: "Aguarde..."}
       %br/
-      = link_to "Não, cancelar minha recusa", new_legal_rent_path, class: 'ui button green fluid', data: {disable_with: "Aguarde..."}
+      = link_to "Eu desejo participar", new_legal_rent_path, class: 'ui button green fluid', data: {disable_with: "Aguarde..."}
