--- a/engines/candidate/app/views/candidate/legal_rents/_form.html.haml
+++ b/engines/candidate/app/views/candidate/legal_rents/_form.html.haml
@@ -4,9 +4,9 @@
     Destina-se às famílias de renda mais baixa, em especial as que moram de aluguel e gastam mais de 30% de rendimento, aos idosos e à população vulnerável. Para eles, o governo oferecerá moradia, próximo dos empregos e de serviços públicos, com valores mais baixos que os praticados no mercado de locação. Quem participa dessa linha do programa continua na lista de atendimento habitacional, aguardando ser contemplado em outra modalidade.
 
 - if !Candidate::LegalRent.where(cadastre_id: current_cadastre.id).present?
-  = link_to "Sim, Eu quero participar", new_legal_rent_path(status: true), class: 'ui button green fluid', data: {disable_with: "Aguarde..."}
+  = link_to "Eu quero participar", new_legal_rent_path(status: true), class: 'ui button green fluid', data: {disable_with: "Aguarde..."}
   %br
-  = link_to "Não, Eu desejo recusar", new_legal_rent_path, remote: true, class: 'ui button red fluid', data: {disable_with: "Aguarde..."}
+  = link_to "Eu desejo recusar", new_legal_rent_path, remote: true, class: 'ui button red fluid', data: {disable_with: "Aguarde..."}
 - else
   %br/
   - rent = Candidate::LegalRent.where(cadastre_id: current_cadastre.id).first
@@ -25,4 +25,4 @@
         Você recusou participar do programa Aluguel Legal na data #{rent.created_at.strftime('%d/%m/%Y - %H:%M')}
         %br
         %br
-        Dúvidas? entre em contato com a CODHAB.
+        Dúvidas? Entre em contato com a CODHAB via Requerimento.
