--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -26,7 +26,7 @@
       Notificações
 
 
-  - if 1 > 2
+  - if current_cadastre.general.is_older
     .column{data: { intro: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar ", position: "top"} }
       .ui.segment.text-center{style: 'background-color: rgb(129, 195, 65) !important'}
         %a{href: "#{candidate.new_legal_rent_path}"}
