--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -16,6 +16,12 @@
 .divider
 .ui.three.column.grid.container.black
   .column
+    .ui.segment.text-center{style: 'background-color: #0892ff !important'}
+      %a{href: "#{attendance.custom_custom_tickets_path}"}
+        %i.icon.check.huge.gray{style: 'color: white !important'}
+    .text-center
+      Habilitação
+  .column
     .ui.segment.text-center
       - if current_cadastre.notifications.unread.present?
         .floating.ui.red.label{style:"top: -0.8em; left: 100%;"}
